frame/support/test/tests/pallet_ui/type_value_invalid_item.stderr
error: Invalid pallet::type_value, expected item fn
  --> $DIR/type_value_invalid_item.rs:18:24
   |
18 |     #[pallet::type_value] struct Foo;
   |                           ^^^^^^
